--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="profileStyles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
     <nav>
         <ul>
             <li><a href="index.html">Go to profile</a></li>
@@ -30,13 +30,13 @@
         <img src="./images/profile.jpg" alt="A profile picture of me" width="200px">
     </header>
 
-    <section>
+    <section class="box-1">
         <h3>My Skills</h3>
         <p>Agile and Scrum methodologies</p>
         <p>Cooking up some sweet code</p>
     </section>
 
-    <section>
+    <section class="box-2 floating-box">
         <h3>My Hobbies</h3>
         <ul>
             <li>French</li>
@@ -45,7 +45,7 @@
         </ul>
     </section>
 
-    <section>
+    <section class="box-1">
         <h3>My Goals</h3>
         <ol>
             <li>Become a great consultant</li>
@@ -54,7 +54,7 @@
         </ol>
     </section>
 
-    <footer>
+    <footer class="box-2">
         <h4>My Searchbar</h4>
 
         <!-- <form action="mysite.com/api/customers" method="POST"> -->
