--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <title>My Profile</title>
 
     <!-- links to external resources -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="profileStyles.css" rel="stylesheet">
 </head>
 
 <body class="container">
     <nav>
-        <ul>
+        <ul class="flex-container">
             <li><a href="index.html">Go to profile</a></li>
             <li><a href="projects.html">Go to projects</a></li>
             <li><a href="https://www.linkedin.com/in/peter-bellaby-40b93022b/" target="_blank">My LinkedIn</a></li>
@@ -27,7 +28,10 @@
         <h1>My Profile</h1>
         <h2>Peter Bellaby</h2>
         <p>An <em>awesome</em> and <strong>amazing</strong> website demonstration!</p>
-        <img src="./images/profile.jpg" alt="A profile picture of me" width="200px">
+        <div class="flex-container">
+            <img src="./images/profile.jpg" alt="A profile picture of me" width="200px">            
+        </div>
+
     </header>
 
     <section class="box-1">
